[package]
name = "solana-axum-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
bs58 = "0.4"
base64 = { version = "0.22", features = ["alloc"] }
ed25519-dalek = { version = "1.0", features = ["std", "rand_core"] }
rand = "0.7"
solana-sdk = "1.18"
solana-program = "1.18"
spl-token = "3.5"

[profile.release]
opt-level = "z"